# hurst-estimators

./: .buildinfo  .gitignore  CITATION.cff  LICENSE  README.md  deploy_docs.sh  genindex.html  index.html  modules.html  objects.inv  publisher.py  py-modindex.html  pyproject.toml  requirements.txt  search.html  searchindex.js
.doctrees/: environment.pickle  index.doctree  modules.doctree
.github/workflows/: ci.yml
_modules/: index.html
_modules/hurst_estimators/estimators/: central_estimator.html  dfa_estimator.html  ghe_estimator.html  higuchi_estimator.html  periodogram_estimator.html  rs_estimator.html  wavelet_estimator.html
_modules/hurst_estimators/simulators/: generate_fgn.html
_modules/hurst_estimators/utils/: search_opt_seq_len.html
_sources/: index.rst.txt  modules.rst.txt
docs/source/: conf.py  index.rst
examples/: introduction.ipynb
hurst_estimators/: __init__.py  wavelet_estimator.py
hurst_estimators/estimators/: __init__.py  central_estimator.py  dfa_estimator.py  ghe_estimator.py  higuchi_estimator.py  periodogram_estimator.py  rs_estimator.py  wavelet_estimator.py
hurst_estimators/simulators/: __init__.py  generate_fbm.py  generate_fgbm.py  generate_fgn.py
hurst_estimators/utils/: __init__.py  _gen_sbpf.py  search_opt_seq_len.py
tests/: example_test.py  test_central_estimator.py  test_dfa_estimator.py  test_generate_fbm.py  test_generate_fgbm.py  test_generate_fgn.py  test_ghe_estimator.py  test_higuchi_estimator.py  test_periodogram_estimator.py  test_rs_estimator.py  test_utils.py  test_wavelet_estimator.py
