[tool.poetry]
name = "hurst-estimators"
version = "0.0.3"
description = "Library for Hurst estimation methods"
authors = ["Aras Edeş <edesaras@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
scipy = "^1.7.0"
pywavelets = "^1.2.0"
numpy = "^1.21.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2"
python-dotenv = "^0.19.2"
black = "^23.1.0"
pre-commit = "^2.20.0"
sphinx = "^5.0.0"
sphinx_rtd_theme = "^1.0.0"

[tool.black]
line-length = 88
target-version = ['py310']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''
